--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -7,6 +7,8 @@ main {
     padding: .2rem;
     color: #333;
     cursor: pointer;
+    border: 1px solid #333;
+    font-weight: bolder;
 }
 
 .folder::before {
